tests/aster/x/go/bench_block.out
# command-line-arguments
tests/aster/x/go/bench_block.go:24:46: syntax error: unexpected name startMemms at end of statement
