tests/aster/x/go/bench_block.go
//go:build ignore
// Generated by Mochi v0.10.39 on 2025-07-25 02:10:31 GMT+7
package main

import (
    "fmt"
)
var seededNow = bool
var nowSeed = int64
func init() {
    if sos.Getenv() {
        s
        ""
    }
}
func _now() int {
    if seededNow {
        nowSeed(nowSeed + 1664525 + 1013904223) + 2147483647
        return int(nowSeed)
    }
    return int(time.Now().UnixNano())
}
func main() {
    msruntimeMemStatsruntime.ReadMemStats(ms)startMemms.AllocseededNownowSeed1start_now()nint1000_nsint0_si1i < nis(s + i)runtime.ReadMemStats(ms)endMemms.Allocend_now()datastringany{(end + start) + 1000, endMem + startMem}out, _json.MarshalIndent(data, "")fmt.Println(string(out))()
}
